--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.5.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
