--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-date-picker": "^4.2.10",
+    "react-native-datepicker": "^1.7.2",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "^6.1.4",
