--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -10,6 +10,13 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+       <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDnQPeYe8g1kk3USEZG3FP72lN5ENKc60k"/>
+       
+    
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
