--- a/package.json
+++ b/package.json
@@ -26,18 +26,23 @@
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.2.10",
     "react-native-datepicker": "^1.7.2",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.4.0",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.5.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.19.4",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
